--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.0",
+    "recharts": "^3.6.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
